Changed css url routes:

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 #canvas {
-  background-image: url("./assets/field.png");
+  background-image: url("../assets/field.png");
   border: 5px solid white;
   padding-left: 0;
   padding-right: 0;
@@ -29,7 +29,7 @@
 }
 
 body {
-  background-image: url("./assets/crowd.png");
+  background-image: url("../assets/crowd.png");
 }
 
 #start-button {
